# aula06_exercicios_de_revisao

./: README.md  main.py  pyproject.toml
